# TinyRenderer3D

./: CMakeLists.txt  Makefile  ReadMe.md  compile_flags.txt  log.md
include/tinyrenderer3d/: camera.hpp  cube_map.hpp  drawable.hpp  itexture.hpp  light.hpp  log.hpp  material.hpp  mesh.hpp  model.hpp  object.hpp  program.hpp  renderer.hpp  shader.hpp  shadow_map.hpp  skybox.hpp  texture.hpp  tinyrenderer3d.hpp  tool.hpp  types.hpp  vmath.hpp
shader/: pure_color_shader.frag  pure_color_shader.vert  shadow.vert  skybox.frag  skybox.vert  tex_shader.frag  tex_shader.vert
shaders/: shader.frag  shader.vert
src/: camera.cpp  cube_map.cpp  drawable.cpp  itexture.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  object.cpp  program.cpp  renderer.cpp  shader.cpp  shadow_map.cpp  skybox.cpp  texture.cpp  tool.cpp
test/: CMakeLists.txt  TestClearScreen.cpp  TestDrawMesh.cpp  TestDrawModel.cpp  TestLight.cpp  TestNormalMap.cpp  TestShadow.cpp  TestSkybox.cpp  app.hpp  draw_basic.cpp  draw_basic.out  helloworld.cpp  test_framework.hpp
test/clear_screen.out.dSYM/Contents/: Info.plist
test/clear_screen.out.dSYM/Contents/Resources/DWARF/: clear_screen.out
test/draw_basic.out.dSYM/Contents/: Info.plist
test/draw_basic.out.dSYM/Contents/Resources/DWARF/: draw_basic.out
test/draw_cube.out.dSYM/Contents/: Info.plist
test/draw_cube.out.dSYM/Contents/Resources/DWARF/: draw_cube.out
test_resources/brick/: brick.blend  brick.blend1  brick.mtl
test_resources/cube/: cube.mtl
test_resources/plane/: plane.mtl
tr3d/: renderer.hpp  tool.hpp
